tests/diagnostics/variables/assignments/unknown_name/expect.txt
# exit: 1
input/main.lang0:2:5: error: unknown name 'x'
      x = 1
      ^
